<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.learnlib</groupId>
    <artifactId>ralib</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ralib</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- Dependency versions appear alphabetically below -->
        <checker-qual.version>3.49.5</checker-qual.version>
        <commons-lang.version>3.18.0</commons-lang.version>
        <gson.version>2.13.1</gson.version>
        <guava.version>33.4.8-jre</guava.version>
        <jakarta-xml.version>4.0.2</jakarta-xml.version>
        <jaxb-runtime.version>4.0.5</jaxb-runtime.version>
        <jconstraints.version>0.9.9</jconstraints.version>
        <learnlib.version>0.18.0</learnlib.version>

        <!-- Plugin versions in alphabetical order -->
        <assembly-plugin.version>3.7.1</assembly-plugin.version>
        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <dependency-plugin.version>3.8.1</dependency-plugin.version>
        <spotless-plugin.version>2.45.0</spotless-plugin.version>
        <spotbugs-plugin.version>4.9.3.2</spotbugs-plugin.version>
        <surefire-plugin.version>3.5.3</surefire-plugin.version>
    </properties>

    <build>
        <plugins>
            <!-- Dependency analysis -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <id>analyze-only</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                            <ignoreUnusedRuntime>true</ignoreUnusedRuntime>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Format the source code -->
            <plugin>
	        <groupId>com.diffplug.spotless</groupId>
	        <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-plugin.version}</version>
                <configuration>
		    <formats>
                        <format>
                            <includes>
                                <include>**/*.xml</include>
                            </includes>
                            <excludes>
                                <exclude>target/**/*.xml</exclude>
                            </excludes>
                            <endWithNewline />
                            <trimTrailingWhitespace />
                        </format>
                    </formats>
		    <java>
		        <endWithNewline />
                        <formatAnnotations />
			<importOrder>
			    <order>java|jakarta,com,org,de|gov|net</order>
			</importOrder>
                        <!--<indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>-->
			<!--<palantirJavaFormat>
			    <version>2.27.0</version>
			</palantirJavaFormat>-->
			<removeUnusedImports />
                        <trimTrailingWhitespace />
		    </java>
		</configuration>
		<executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
	    </plugin>

            <!-- Compilation options -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <release>17</release>
                    <showWarnings>true</showWarnings>
                    <compilerArgs>
                         <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Static code analysis -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-plugin.version}</version>
                <configuration>
                    <threshold>High</threshold>
                    <includeFilterFile>.spotbugs/include.xml</includeFilterFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>

            <!-- Make a jar archive -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${assembly-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.learnlib.ralib.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- learnlib -->
            <dependency>
                <groupId>de.learnlib</groupId>
                <artifactId>learnlib-parent</artifactId>
                <version>${learnlib.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- jakarta-xml api -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta-xml.version}</version>
            </dependency>
            <!-- jaxb runtime -->
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb-runtime.version}</version>
	        <scope>runtime</scope>
            </dependency>
             <!-- checker framework -->
            <dependency>
                <groupId>org.checkerframework</groupId>
                <artifactId>checker-qual</artifactId>
                <version>${checker-qual.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-api</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-commons-util</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-core</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-api</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-util</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-core</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-z3</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.checkerframework</groupId>
            <artifactId>checker-qual</artifactId>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
    </dependencies>
</project>
